# NEngine

./: .clang-format  .clangd  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  NEngine.sln  README.md  build.bat  compile.bat  run.bat
.github/workflows/: cmake.yml
NEditor/: CMakeLists.txt
NEditor/include/NEditor/: Editor.h
NEditor/src/: Editor.cpp  main.cpp
NEngine/: CMakeLists.txt  NEngine.cpp  NEngine.rc  NEngine.vcxproj  NEngine.vcxproj.filters  Resource.h
NEngine/include/: buffer.h  camera.h  geometry.h  image.h  misc.h  pipeline_state.h  shader_binding.h  utils.h  vertex.h  vulkan_application.h  vulkan_utils.h
NEngine/include/NEngine/: Engine.h  Game.h  Globals.h  Scene.h
NEngine/include/NEngine/ECS/: ECS.h  Entity.h  EntityManager.h  Repo.h  System.h  SystemManager.h
NEngine/include/NEngine/ECS/Components/: AnimationComponent.h  AudioComponent.h  CameraComponent.h  CollisionComponent.h  InputComponent.h  PositionComponent.h  RenderComponent.h
NEngine/include/NEngine/ECS/Systems/: AnimationSystem.h  AudioSystem.h  CollisionSystem.h  InputSystem.h  MoveSystem.h  RenderSystem.h  System.h
NEngine/include/NEngine/Helpers/: Actor.h  AssetManager.h  Buffer.h  Camera.h  CubeMap.h  DeviceResources.h  DynamicConstBuffer.h  DynamicCubeMap.h  FileWriter.h  GLTFLoader.h  InputLayout.h  LightHelper.h  MeshGenerator.h  ModelImporter.h  ModelLoader.h  ParticleSystem.h  Renderer.h  ShaderManager.h  ShadowMap.h  Texture.h  Transform.h  objloader.h
NEngine/include/NEngine/Input/: Keyboard.h  Mouse.h
NEngine/include/NEngine/Math/: Mat3X3.h  Mat4X4.h  Math.h  MathTest.h  MathUtils.h  NEMath.h  Vec2D.h  Vec3D.h  Vec4D.h  mat3.h  mat4.h  vec2.h  vec3.h  vec4.h
NEngine/include/NEngine/Renderer/: Animation.h  BasePass.h  Bindable.h  Drawable.h  IndexBuffer.h  InputLayout.h  Mesh.h  MeshPrimitive.h  Model.h  PixelShader.h  RasterizerState.h  RenderModel.h  RenderNode.h  Sampler.h  Texture.h  VertexBuffer.h  VertexShader.h  WireframePass.h
NEngine/include/NEngine/Utils/: Image.h  Timer.h  Utils.h
NEngine/res/gLTF/: cube.glb  plane.glb
NEngine/shader/: BasePass.hlsli  BasePassPS.hlsl  BasePassVS.hlsl  LightingHelper.hlsli  PBRPS.hlsl  PBRPassPS.hlsl  Particle.hlsli  ParticlePS.hlsl  ParticleVS.hlsl  PhongPS.hlsl  ShadowVS.hlsl
NEngine/shader/PBR/: PBR.hlsli  ToneMapping.hlsli
NEngine/shaders/: gooch_fs.frag  phong_fs.frag  phong_vs.vert  shader.frag  shader.vert
NEngine/src/: Engine.cpp  Scene.cpp  buffer.cpp  camera.cpp  geometry.cpp  image.cpp  main.cpp  pipeline_state.cpp  shader_binding.cpp  utils.cpp  vulkan_application.cpp  vulkan_utils.cpp
NEngine/src/ECS/: EntityManager.cpp
NEngine/src/ECS/Systems/: AnimationSystem.cpp  AudioSystem.cpp  CollisionSystem.cpp  InputSystem.cpp  MoveSystem.cpp  RenderSystem.cpp
NEngine/src/Helpers/: Actor.cpp  AssetManager.cpp  Camera.cpp  CubeMap.cpp  DeviceResources.cpp  DynamicConstBuffer.cpp  DynamicCubeMap.cpp  FileWriter.cpp  GLTFLoader.cpp  InputLayout.cpp  MeshGenerator.cpp  ModelImporter.cpp  ModelLoader.cpp  ParticleSystem.cpp  Renderer.cpp  ShaderManager.cpp  ShadowMap.cpp  Texture.cpp  Transform.cpp  VertexBuffer.cpp  objloader.cpp
NEngine/src/Input/: Keyboard.cpp  Mouse.cpp
NEngine/src/Math/: Mat3X3.cpp  Mat4X4.cpp  Math.cpp  MathTest.cpp  MathUtils.cpp  NEMath.cpp  Vec2D.cpp  Vec3D.cpp  Vec4D.cpp  mat3.cpp  mat4.cpp  vec2.cpp  vec3.cpp  vec4.cpp
NEngine/src/Renderer/: Animation.cpp  BasePass.cpp  IndexBuffer.cpp  InputLayout.cpp  Mesh.cpp  MeshPrimitive.cpp  Model.cpp  PixelShader.cpp  RasterizerState.cpp  Sampler.cpp  Texture.cpp  VertexShader.cpp  WireframePass.cpp
NEngine/src/Utils/: Utils.cpp
Sandbox/: CMakeLists.txt  Sandbox.vcxproj  Sandbox.vcxproj.filters
Sandbox/include/Sandbox/: Game.h  MyGame.h
Sandbox/res/gLTF/: cube.glb  plane.glb  player.glb
Sandbox/shader/: ColorVS.hlsl  Common.hlsli  PhongPS.hlsl
Sandbox/src/: Game.cpp  Main.cpp  MyGame.cpp
app/: main.c
math/: nemath.c
src/: allocator.c  allocator.h  app.c  app.h  ari.h  ari_vulkan.c  defines.h  main.c  nemath.h  nengine.c  nengine.h  platform.h  platform_win32.c
